UPDATE - Doc User Profile

--- a/app/src/main/res/layout/activity_patient_appointment_booking_new.xml
+++ b/app/src/main/res/layout/activity_patient_appointment_booking_new.xml
@@ -31,7 +31,6 @@
         android:layout_height="70dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/navy"
-        android:drawablePadding="0dp"
         android:includeFontPadding="false"
         android:text="@string/newAppointment"
         android:textColor="#FFFFFF"
@@ -56,6 +55,7 @@
         android:id="@+id/recyclerViewPatientAppointments"
         android:layout_width="match_parent"
         android:layout_height="500dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/button_Add_New_Appointment_New"
         app:layout_constraintEnd_toEndOf="parent"
