--- a/app/src/main/res/layout/activity_get_appointment_details.xml
+++ b/app/src/main/res/layout/activity_get_appointment_details.xml
@@ -10,9 +10,9 @@
     <View
         android:id="@+id/view43"
         android:layout_width="match_parent"
-        android:layout_height="520dp"
-        android:layout_marginTop="60dp"
-        android:background="#ffffff"
+        android:layout_height="470dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/whiterectangle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,11 +21,9 @@
         android:id="@+id/view44"
         android:layout_width="340dp"
         android:layout_height="287dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/button_white_and_blue_border_background"
-        app:layout_constraintBottom_toTopOf="@+id/buttonDoneSaveAppointment2"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/pop_up_appointments_background"
+        app:layout_constraintEnd_toEndOf="@+id/view43"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
@@ -33,53 +31,46 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="56dp"
         android:text="@string/descriptiontext"
         android:textAlignment="center"
-        android:textColor="#BC000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/view44"
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <EditText
         android:id="@+id/editTextTextMyDescription"
-        android:layout_width="220dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="2dp"
-        android:background="#ffffff"
+        android:layout_marginStart="32dp"
         android:ellipsize="end"
         android:hint="@string/symptomshint"
         android:inputType="textPersonName"
         android:maxLines="3"
         android:textColor="#1A446B"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView15" />
 
     <TextView
         android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="28dp"
         android:text="@string/timeavailableCAPS"
-        android:textColor="#BC000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/view44"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextMyDescription" />
 
     <TextView
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/whiterectangle"
-        android:fontFamily="serif-monospace"
-        android:paddingTop="4dp"
         android:text="@string/details"
         android:textAlignment="center"
         android:textColor="#1A446B"
@@ -103,31 +94,30 @@
 
     <Button
         android:id="@+id/buttonDoneSaveAppointment2"
-        android:layout_width="140dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="340dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/navy"
-        android:fontFamily="monospace"
-        android:text="@string/textokay"
+        android:text="@string/bookappointment"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPatientAge_new" />
+        app:layout_constraintTop_toBottomOf="@+id/view44" />
 
     <TextView
         android:id="@+id/textView85"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="44dp"
         android:text="@string/date_available"
-        android:textColor="#BC000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/view44"
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
     <TextView
@@ -154,37 +144,25 @@
         android:id="@+id/textView87"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="40dp"
         android:text="@string/patients_age"
-        android:textColor="#BC000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/view44"
         app:layout_constraintTop_toBottomOf="@+id/textView85" />
 
     <EditText
         android:id="@+id/editTextPatientAge_new"
         android:layout_width="180dp"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="22dp"
-        android:background="#ffffff"
+        android:layout_marginStart="18dp"
         android:ems="10"
         android:hint="@string/enter_age"
         android:inputType="number"
+        android:textColor="#1A446B"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView87"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView87" />
-
-    <View
-        android:id="@+id/divider4"
-        android:layout_width="300dp"
-        android:layout_height="2dp"
-        android:background="#1E1D1D"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <View
         android:id="@+id/view45"
