--- a/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
+++ b/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
@@ -15,7 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="520dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,11 +89,9 @@
             android:layout_width="340dp"
             android:layout_height="34dp"
             android:layout_marginTop="16dp"
-            android:background="#1A446B"
             android:elevation="5dp"
             android:text="@string/doctorassigned"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="@+id/view42"
@@ -104,8 +101,8 @@
         <View
             android:id="@+id/view50"
             android:layout_width="340dp"
-            android:layout_height="180dp"
-            android:background="#E1F5FE"
+            android:layout_height="170dp"
+            android:background="@drawable/pop_up_appointments_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView88" />
@@ -194,7 +191,7 @@
             android:background="#FFFFFF"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
-            android:text="@string/time_availability"
+            android:text="@string/date_available"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDepartmentNew" />
 
