--- a/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
+++ b/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
@@ -14,6 +14,7 @@
             android:id="@+id/view42"
             android:layout_width="match_parent"
             android:layout_height="520dp"
+            android:background="@drawable/pop_up_appointments_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -22,67 +23,67 @@
             android:id="@+id/textViewAppointmentDescriptionNew"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="-6dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/textview_background"
             android:hint="@string/descriptiontext"
             android:padding="8dp"
             android:textAlignment="textStart"
-            android:textColor="#BC000000"
+            android:textColor="#1A446B"
             android:textSize="18sp"
             android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView80" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textViewAppointmentDepartmentNew"
             android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="-6dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/textview_background"
             android:hint="@string/age"
             android:padding="8dp"
             android:textAlignment="textStart"
-            android:textColor="#BC000000"
+            android:textColor="#1A446B"
             android:textSize="18sp"
             android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView82" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDescriptionNew" />
 
         <TextView
             android:id="@+id/textViewAppointmentDateNew"
             android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="-6dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/textview_background"
-            android:hint="@string/timeavailableCAPS"
+            android:hint="@string/date_available"
             android:padding="8dp"
             android:textAlignment="textStart"
-            android:textColor="#BC000000"
+            android:textColor="#1A446B"
             android:textSize="18sp"
             android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView84" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDepartmentNew" />
 
         <TextView
             android:id="@+id/textViewAppointmentTimeNew"
             android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="-6dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/textview_background"
-            android:hint="@string/dateCAPS"
+            android:hint="@string/time_availability"
             android:padding="8dp"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
             android:textAlignment="textStart"
-            android:textColor="#BC000000"
+            android:textColor="#1A446B"
             android:textSize="18sp"
             android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView89" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDateNew" />
 
         <TextView
             android:id="@+id/textView88"
@@ -102,6 +103,7 @@
             android:id="@+id/view50"
             android:layout_width="340dp"
             android:layout_height="170dp"
+            android:layout_marginTop="-12dp"
             android:background="@drawable/pop_up_appointments_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,17 +113,17 @@
             android:id="@+id/textViewDocName_APP"
             android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/textview_background"
             android:hint="@string/pending"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#1A446B"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/view42"
-            app:layout_constraintTop_toBottomOf="@+id/textView88" />
+            app:layout_constraintTop_toTopOf="@+id/view50" />
 
         <TextView
             android:id="@+id/textViewDocPhone_APP"
@@ -133,7 +135,7 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#1A446B"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -150,62 +152,11 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#1A446B"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewDocPhone_APP" />
 
-        <TextView
-            android:id="@+id/textView80"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:background="#FFFFFF"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:text="@string/descriptiontext"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/view42" />
-
-        <TextView
-            android:id="@+id/textView82"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="#FFFFFF"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:text="@string/patients_age"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDescriptionNew" />
-
-        <TextView
-            android:id="@+id/textView84"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="#FFFFFF"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:text="@string/date_available"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDepartmentNew" />
-
-        <TextView
-            android:id="@+id/textView89"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="#FFFFFF"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:text="@string/timeavailableCAPS"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDateNew" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
