UPDATE - Doc User Profile

--- a/app/src/main/res/layout/activity_doctor_chatting.xml
+++ b/app/src/main/res/layout/activity_doctor_chatting.xml
@@ -10,37 +10,37 @@
         android:id="@+id/view38"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
-        android:background="@drawable/top_ight_curved_edges"
-        android:rotationX="-182"
+        android:background="@drawable/navy_blue_curved_top"
         android:elevation="10dp"
+        android:rotationX="-182"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView29"
+        android:id="@+id/imageViewDocChattingPage_SET"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="8dp"
         android:elevation="11dp"
-        android:background="@drawable/iconpatient"
         app:layout_constraintEnd_toEndOf="@+id/view38"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView70"
+        android:id="@+id/textViewDocChatting_SET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="@string/PATIENT"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
         android:elevation="11dp"
+        android:hint="@string/network_issue"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#B1AFAF"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView29" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewDocChattingPage_SET" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDoctorPage"
