--- a/app/src/main/res/layout/activity_messages_from_patients.xml
+++ b/app/src/main/res/layout/activity_messages_from_patients.xml
@@ -9,20 +9,19 @@
     <View
         android:id="@+id/view36"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="20dp"
         android:background="#FFFFFF"
         android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/divider25"
         android:layout_width="200dp"
-        android:layout_height="10dp"
-        android:background="@drawable/center_shape"
-        android:elevation="10dp"
+        android:layout_height="5dp"
+        android:background="#1A446B"
+        android:elevation="5.1dp"
         app:layout_constraintBottom_toBottomOf="@+id/view36"
         app:layout_constraintEnd_toEndOf="@id/view36"
         app:layout_constraintStart_toStartOf="@+id/view36"
@@ -32,7 +31,7 @@
         android:id="@+id/view37"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:background="@drawable/top_ight_curved_edges"
+        android:background="@drawable/navy_blue_curved_top"
         android:rotationX="-180"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,9 +52,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPatientsMessages"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="580dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/view36"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view37" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
