--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -108,11 +108,12 @@
     <ProgressBar
         android:id="@+id/progressBarLogin_MAIN"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="4dp"
         android:indeterminateDrawable="@drawable/progress_icon"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/view53"
-        app:layout_constraintStart_toStartOf="@+id/view53"
-        app:layout_constraintTop_toBottomOf="@+id/imageView39" />
+        app:layout_constraintBottom_toBottomOf="@+id/editTextTextLoginEmail"
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextLoginEmail"
+        app:layout_constraintTop_toTopOf="@+id/editTextTextLoginEmail" />
 </androidx.constraintlayout.widget.ConstraintLayout>
